WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150070
ASSERT(m_motionManager) on emgn.com page
https://bugs.webkit.org/show_bug.cgi?id=150070
Summary
ASSERT(m_motionManager) on emgn.com page
Dean Jackson
Reported
2015-10-12 18:17:36 PDT
ASSERT(m_motionManager) on emgn.com page
Attachments
Patch
(3.87 KB, patch)
2015-10-12 18:22 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2015-10-12 18:21:19 PDT
<
rdar://problem/18383732
>
Dean Jackson
Comment 2
2015-10-12 18:22:49 PDT
Created
attachment 262949
[details]
Patch
Simon Fraser (smfr)
Comment 3
2015-10-12 18:25:01 PDT
Comment on
attachment 262949
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=262949&action=review
> Source/WebCore/platform/ios/WebCoreMotionManager.mm:79 > + m_initialized = NO;
No need for this; Objective-C ivars get initialized to 0 by default.
Dean Jackson
Comment 4
2015-10-13 14:49:45 PDT
Committed
r191007
: <
http://trac.webkit.org/changeset/191007
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug