Source/WebCore/platform/ios/WebCoreMotionManager.mm
@@ -77,6 +77,7 @@ static const double kGravity = 9.80665;
     self = [super init];
     if (self)
         [self performSelectorOnMainThread:@selector(initializeOnMainThread) withObject:nil waitUntilDone:NO];
+
     return self;
 }
 
@@ -103,25 +104,29 @@ static const double kGravity = 9.80665;
 - (void)addMotionClient:(WebCore::DeviceMotionClientIOS *)client
 {
     m_deviceMotionClients.add(client);
-    [self checkClientStatus];
+    if (m_initialized)
+        [self checkClientStatus];
 }
 
 - (void)removeMotionClient:(WebCore::DeviceMotionClientIOS *)client
 {
     m_deviceMotionClients.remove(client);
-    [self checkClientStatus];
+    if (m_initialized)
+        [self checkClientStatus];
 }
 
 - (void)addOrientationClient:(WebCore::DeviceOrientationClientIOS *)client
 {
     m_deviceOrientationClients.add(client);
-    [self checkClientStatus];
+    if (m_initialized)
+        [self checkClientStatus];
 }
 
 - (void)removeOrientationClient:(WebCore::DeviceOrientationClientIOS *)client
 {
     m_deviceOrientationClients.remove(client);
-    [self checkClientStatus];
+    if (m_initialized)
+        [self checkClientStatus];
 }
 
 - (BOOL)gyroAvailable
@@ -149,6 +154,8 @@ static const double kGravity = 9.80665;
 
     m_locationManager = [allocCLLocationManagerInstance() init];
     m_headingAvailable = [getCLLocationManagerClass() headingAvailable];
+
+    m_initialized = YES;
 
     [self checkClientStatus];
 }
